_sass/_posts.scss
/**
 * Blog posts
 */
 .wrapper {
     .post {
         margin-bottom: 2em;

         @include media($mobile) {
             background: $grey-color-medium;
             border-radius: 0.5em;
             display: inline-block;
             margin-bottom: 4em;
             overflow: hidden;
             padding: 3em;
             position: relative;
             width: 74%;
             z-index: 1;
         }
     }
 }

 .post-list {
     list-style: none;
     margin-left: 0;

     > li {
         margin-bottom: $spacing-unit / 2;

         @include media($mobile) {
             display: table;
         }

         img {

             @include media($mobile) {
                 display: table-cell;
                 float: none;
                 margin-bottom: 0;
                 padding: 1em 1em 1em 0;
                 width: 100%;
             }
         }

         > div {
             @include media($mobile) {
                 display: table-cell;
                 vertical-align: middle;

                 &:last-of-type {
                     width: 60%;
                 }
             }
         }

         span {
             display: inline-block;
         }
     }
 }

 .post > .post-list > li {
     margin-bottom: 2em;
 }

 .post-meta {
     font-size: $small-font-size;
     //color: $grey-color;
 }

 .post-link {
     display: block;
     font-size: 24px;
 }

 .post-header {
     position: relative;
     margin-bottom: 2em;

     &:before {
        background: linear-gradient(to top right, rgba(0, 0, 0, 0.5) 0%, transparent 100%);
        content: '';
        height: 100%;
        left: 0;
        position: absolute;
        top: 0;
        width: 100%;
        z-index: 1;
     }

     img {
         margin-bottom: 0;
     }

     img + .post-title {
         font-size: 10vw;
         margin: 0;
         position: absolute;
             bottom: 1rem;
             left: 1rem;
              @include media($mobile) {
                  font-size: 6vw;       
              }
         text-shadow: 3px 3px 8px #000;
         width: 60%;
         z-index: 10;
     }
 }

 .post-title {
     font-size: 6vw;
     line-height: 1;
 }

 .post-content {
     margin-bottom: $spacing-unit;

     img {
        padding: .5em 0;
     }
 }

 .post-excerpt {
     p, a {
         font-size: 1rem;
     }
 }

